--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: Saint Theme
+Theme Name: WP NG
 Theme URI: http://www.impertinents.com/
 Author: Les Impertinents
 Author URI: http://www.impertinents.com/
 Description: WordpressSaint is a base theme
-Version: 1.2
+Version: 1.3
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: st
